OWASP/base.tf
#VARS

variable aws_access_key {} 
variable aws_secret_key {}
variable "private_key_path" {}
variable "key_name" {}

variable "region" {
    default = "us-east-2"
}

# PROVIDERS
provider "aws" {
  profile = "mfa"
  region = var.region
}

# DATA

# data "aws_ami" "aws-linux" {
#   most_recent = true
#   owners      = ["amazon"]

#   filter {
#     name   = "name"
#     values = ["amzn-ami-hvm*"]
#   }

#   filter {
#     name   = "root-device-type"
#     values = ["ebs"]
#   }

#   filter {
#     name   = "virtualization-type"
#     values = ["hvm"]
#   }
# }

resource "aws_default_vpc" "default"{
 

}


resource "aws_security_group" "allow_ssh" {
    name        = "owasp_demo"
    description = "Allow ports for owasp demo"
    vpc_id     = aws_default_vpc.default.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "linux_box" {
    ami =  "ami-0233c2d874b811deb"
    instance_type = "t2.micro"
    key_name = var.key_name
    vpc_security_group_ids = [ aws_security_group.allow_ssh.id ]

    tags = {
      Name = "jordan-owasp-terraform-test"
    }

    connection {
        type = "ssh"
        host = self.public_ip
        user = "ec2-user"
        private_key = file(var.private_key_path)
    }

    # provisioner  "remote-exec" {
    #     inline = [
    #         "sudo yum install nginx -y",
    #         "sudo service nginx start"
    #     ]
    # }
}


# OUTPUT
output "aws_instance_public_dns" {
  value = aws_instance.linux_box.public_dns
}
